ConcurrentExecutor record